# retail-risk-augmentation-oss

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ui  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
k8s/: kind-config.yaml
k8s/base/: api-deployment.yaml  cassandra-service.yaml  cassandra-statefulset.yaml  configmap.yaml  job-generate-data.yaml  job-run-pipeline.yaml  kustomization.yaml  minio-service.yaml  minio-statefulset.yaml  namespace.yaml  secret.yaml  trino-deployment.yaml  ui-deployment.yaml
retail_risk_aug/: __init__.py  app_state.py  cli.py  config.py
retail_risk_aug/api/: app.py
retail_risk_aug/generator/: __init__.py  service.py
retail_risk_aug/graph/: __init__.py  dev_graph.py
retail_risk_aug/models/: __init__.py  domain.py
retail_risk_aug/scoring/: __init__.py  service.py
retail_risk_aug/store/: __init__.py  cassandra.py  iceberg.py  trino.py
retail_risk_aug/ui/: __init__.py  app.py
retail_risk_aug/vector/: __init__.py  service.py
scripts/: k8s_smoke.sh
tests/: test_api_smoke.py  test_generator.py  test_graph.py  test_scoring.py  test_vector.py
tests/integration/: conftest.py  test_cassandra_adapter.py  test_iceberg_adapter.py  test_trino_adapter.py
