[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-risk-augmentation-oss"
version = "0.1.0"
description = "Kubernetes-first retail risk augmentation reference implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "numpy>=1.26",
  "networkx>=3.2",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "streamlit>=1.36",
  "streamlit-agraph>=0.0.45",
  "streamlit-autorefresh>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
storage = [
  "cassandra-driver>=3.29",
  "pyiceberg>=0.7",
  "pyarrow>=16.0",
  "trino>=0.330",
]
integration = [
  "testcontainers>=4.9",
]

[tool.setuptools.packages.find]
include = ["retail_risk_aug*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
